<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assignmenttwo.rafi.programmingassignmenttwo.ProfessorDetailsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/professorName"
        android:id="@+id/profID" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profImage"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/profID"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/firstDegree"
        android:id="@+id/firstDegree"
        android:layout_below="@+id/profImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/secondDegree"
        android:id="@+id/secondDegree"
        android:layout_below="@+id/firstDegree"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/thirdDegree"
        android:id="@+id/thirdDegree"
        android:layout_below="@+id/secondDegree"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fourthDegree"
        android:id="@+id/fourthDegree"
        android:layout_below="@+id/thirdDegree"
        android:layout_marginTop="10dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profRating"
        android:layout_below="@+id/fourthDegree"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:progressTint="#001aff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ratingScale"
        android:id="@+id/ratingScale"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/profRating"
        android:layout_alignParentLeft="false"
        android:layout_alignLeft="@+id/profRating" />
</RelativeLayout>
