<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assignmenttwo.rafi.programmingassignmenttwo.ProfessorsListFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/firstProfessor"
        android:id="@+id/firstProf"
        android:shadowColor="#AA000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/secondProfessor"
        android:id="@+id/secondProf"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/firstProf"
        android:layout_marginTop="10dp"
        android:shadowColor="#AA000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/thirdProfessor"
        android:id="@+id/thirdProf"
        android:layout_below="@+id/secondProf"
        android:layout_marginTop="10dp"
        android:shadowColor="#AA000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fourthProfessor"
        android:id="@+id/fourthProf"
        android:layout_below="@+id/thirdProf"
        android:layout_marginTop="10dp"
        android:shadowColor="#AA000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fifthProfessor"
        android:id="@+id/fifthProf"
        android:layout_below="@+id/fourthProf"
        android:layout_marginTop="10dp"
        android:shadowColor="#AA000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"/>
</RelativeLayout>
